--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "A News outlet staff management and publishing app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon Server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/techbuktu/MediaLite#readme",
   "dependencies": {
+    "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "mongoose": "^5.7.1"
   },
