--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/techbuktu/MediaLite#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
