--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
