--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.2",
+    "config": "^3.2.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
